Aligns AddressController to use AddressResponseDTO as a generic wrapper for all responses (GET, POST, PUT, DELETE) Introduces AddressDataDTO for the actual address payload within the wrapper.